# src/app.ts
@@ -1,5 +1,7 @@
 import express  from 'express';
 import authRouter from './routes/users.route';
+import healthRouter from './routes/health.route'
+import adminRouter from "./routes/admin.route";
 import {swaggerSetup}  from "./config/swagger";
 import { requestLoggerGlobal } from './middleware/requestLogger';
 
@@ -10,18 +12,14 @@ export const createApp = () => {
   app.use(express.urlencoded({ extended: true }));
 
 
+  app.use(requestLoggerGlobal)
   swaggerSetup(app);
 
-  app.use(requestLoggerGlobal)
+  
+  app.use('/api/v1/health',healthRouter)
 
   app.use('/api/v1/auth', authRouter)
-
-  // testing----->
-  app.get('/health', (_, res) => {
-    res.status(200).json({ message: 'Server is running' });
-  });
-
-
+  app.use('/api/v1/admin', adminRouter);
 
   return app;
 };
